assets/css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header{
    position: fixed;
    width: 100%;
}

.header-flex{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 30px;
    padding-inline: 20px;
}
.nav-l{
    display: flex;
    gap: 40px;
    align-items: center;
}

.nav-r{
    display: flex;
    align-items: center;
}

.nav-l ul,
.nav-r ul{
    display: flex;
    list-style-type: none;
    gap: 30px;
}

.nav-r li{
    display: flex;
    align-items: center;
}

.header-flex a{
    text-decoration: none;
    color: black;
    font-size: 18px;
}

.header-flex button{
    background-color: #0061ff;
    color: white;
    border: none;
    padding: 5px;
    font-size: 18px;
}

main{
    padding-top: 80px;
}

.corpo-sezione{
    display: flex;
    flex-direction: column;
    width: 60%;
    margin: auto;
    gap: 40px;
}

.corpo-sezione h1{
    font-size: 80px;
}

.lightblue{
    background-color: #b4d0e7;
    padding-top: 60px;
}
.info-sezione{
    display: flex;
}

.p-sezione-l{
    display: flex;
    flex-direction: column;
    width: 35%;
    gap: 20px;
    font-size: 20px;
}


.button-free button{
    margin-bottom: 20px;
    font-size: 20px;
    background-color: #0061ff;
    border: none;
    padding: 10px;
    color: white;
}

.img-sezione{
    width: 65%;
}

.img-sezione img{
    width: 110%;
    object-fit: contain;
    margin-bottom: -70px;
    display: block;
}

.p-sezione-l a{
    display: flex;
}

.p-sezione-l a svg{
    margin-top: 50px;
    font-size: 50px;
}

